code/force-app/main/default/objects/FTP__c/FTP__c.object-meta.xml
<CustomObject>
    <label>FTP</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>