code/force-app/main/default/objects/FTP__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>國家別</label>
    <length>30</length>
    <type>Text</type>
</CustomField>