code/force-app/main/default/objects/FTP__c/fields/Deposit_Loan__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Loan__c</fullName>
    <label>Deposit/Loan</label>
    <length>20</length>
    <type>Text</type>
</CustomField>