code/force-app/main/default/objects/FTP__c/fields/Six_M__c.field-meta.xml
<CustomField>
    <fullName>Six_M__c</fullName>
    <label>6M</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>