code/force-app/main/default/objects/FTP__c/fields/Three_M__c.field-meta.xml
<CustomField>
    <fullName>Three_M__c</fullName>
    <label>3M</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>