code/force-app/main/default/objects/FTP__c/fields/Twelve_M__c.field-meta.xml
<CustomField>
    <fullName>Twelve_M__c</fullName>
    <label>12M</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>