code/force-app/main/default/objects/FTP__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Country__c</columns>
    <columns>Deposit_Loan__c</columns>
    <columns>Date__c</columns>
    <columns>Type__c</columns>
    <columns>One_M__c</columns>
    <columns>Three_M__c</columns>
    <columns>Six_M__c</columns>
    <columns>Twelve_M__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>