code/force-app/main/default/objects/FTP__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>Country__c</columns>
    <columns>Deposit_Loan__c</columns>
    <columns>Date__c</columns>
    <columns>Type__c</columns>
    <columns>One_M__c</columns>
    <columns>Three_M__c</columns>
    <columns>Six_M__c</columns>
    <columns>Twelve_M__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>